# fsd_algorithm

./: .gitignore  README.md
ros/common/fsd_common_meta/: CMakeLists.txt  package.xml
ros/common/fsd_common_meta/missions/: acceleration.launch  skidpad.launch  trackdrive.launch
ros/common/fsd_common_msgs/: CMakeLists.txt  package.xml
ros/common/fsd_common_msgs/msg/: CarState.msg  CarStateDt.msg  ControlCommand.msg  Trajectory.msg  TrajectoryPoint.msg
ros/common/fsd_tools/: CMakeLists.txt  README.md  package.xml
ros/common/fsd_tools/include/fsd_tools/: cubic_spline.h  types.h
ros/common/fsd_tools/src/: cubic_spline.cpp
ros/common/fssim_common/: CMakeLists.txt
ros/common/fssim_common/msg/: State.msg
ros/control/controller/: CMakeLists.txt  README.md  package.xml
ros/control/controller/cmake/: FindIPOPT.cmake
ros/control/controller/config/: acceleration.yaml  skidpad.yaml  trackdrive.yaml
ros/control/controller/include/: control.hpp  control_handle.hpp
ros/control/controller/include/Solver/: mpc_solver.h  pure_pursuit_solver.h  solver_base.h
ros/control/controller/include/Track/: line_track.h  skidpad_track.h  track_base.h  trackdrive_track.h
ros/control/controller/include/Utils/: mpc.h  param.h  types.h  visual.h
ros/control/controller/launch/: acceleration.launch  skidpad.launch  trackdrive.launch
ros/control/controller/script/: install_cppad.bash  install_ipopt.bash
ros/control/controller/src/: control.cpp  control_handle.cpp  main.cpp
ros/control/controller/src/Solver/: mpc_solver.cpp  pure_pursuit_solver.cpp  solver_base.cpp
ros/control/controller/src/Track/: line_track.cpp  skidpad_track.cpp  track_base.cpp  trackdrive_track.cpp
ros/control/controller/src/Utils/: visual.cpp
ros/fsd_common_msgs/: CMakeLists.txt
ros/fsd_common_msgs/msg/: Cone.msg  Map.msg
ros/fssim_interface/: CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
ros/fssim_interface/config/: config.yaml
ros/fssim_interface/include/: interface.hpp
ros/fssim_interface/launch/: only_interface.launch
ros/fssim_interface/src/: fssim_interface_node.cpp
ros/navigation/skidpad_detector/: README.md  package.xml
ros/navigation/skidpad_detector/config/: path_x.txt  path_y.txt
ros/navigation/skidpad_detector/include/: skidpad_detector.hpp  skidpad_detector_handle.hpp
ros/navigation/skidpad_detector/src/: skidpad_detector.cpp
ros/perception/lidar_cluster/: CMakeLists.txt  README.md  package.xml
ros/perception/lidar_cluster/config/: lidar_cluster.yaml
ros/perception/lidar_cluster/include/: lidar_cluster.hpp  lidar_cluster_handle.hpp
ros/perception/lidar_cluster/launch/: lidar_cluster.launch
ros/perception/lidar_cluster/src/: lidar_cluster.cpp  lidar_cluster_handle.cpp  main.cpp
ros/planning/boundary_detector/: CMakeLists.txt  README.md  package.xml
ros/planning/boundary_detector/config/: boundaryDetector.yaml
ros/planning/boundary_detector/include/: boundaryDetector.hpp  boundaryDetector_handle.hpp  type.hpp  visual_path.hpp
ros/planning/boundary_detector/launch/: boundaryDetector.launch  boundary_detector.launch
ros/planning/boundary_detector/src/: boundaryDetector.cpp  boundaryDetector_handle.cpp  main.cpp  visual_path.cpp
ros/planning/line_detector/: CMakeLists.txt  README.md  package.xml
ros/planning/line_detector/config/: line_detector.yaml
ros/planning/line_detector/include/: line_detector.hpp  line_detector_handle.hpp
ros/planning/line_detector/launch/: line_detector.launch
ros/planning/line_detector/src/: line_detector.cpp  line_detector_handle.cpp  main.cpp
ros/planning/path_generator/: CMakeLists.txt  README.md  package.xml
ros/planning/path_generator/config/: acceleration.yaml  skidpad.yaml  trackdrive.yaml
ros/planning/path_generator/include/: path_generator.hpp  path_generator_handle.hpp
ros/planning/path_generator/include/Track/: line_track.h  skidpad_track.h  track_base.h  trackdrive_track.h
ros/planning/path_generator/include/Utils/: param.h  types.h  visual.h
ros/planning/path_generator/launch/: acceleration.launch  skidpad.launch  trackdrive.launch
ros/planning/path_generator/src/: main.cpp  path_generator.cpp  path_generator_handle.cpp
ros/planning/path_generator/src/Track/: line_track.cpp  skidpad_track.cpp  track_base.cpp  trackdrive_track.cpp
ros/planning/path_generator/src/Utils/: visual.cpp
ros/planning/skidpad_detector/: CMakeLists.txt
ros/planning/skidpad_detector/config/: skidpad.pcd  skidpad_detector.yaml
ros/planning/skidpad_detector/include/: skidpad_detector.hpp  skidpad_detector_handle.hpp
ros/planning/skidpad_detector/launch/: skidpad_detector.launch
ros/planning/skidpad_detector/src/: main.cpp  skidpad_detector.cpp  skidpad_detector_handle.cpp
tools/ros_template_generator/: README.md  generate.py
tools/ros_template_generator/roscpp-template/: CMakeLists.txt  package.xml
tools/ros_template_generator/roscpp-template/config/: template.yaml
tools/ros_template_generator/roscpp-template/include/: template.hpp  template_handle.hpp
tools/ros_template_generator/roscpp-template/launch/: template.launch
tools/ros_template_generator/roscpp-template/src/: main.cpp  template.cpp  template_handle.cpp
tools/ros_template_generator/rospy-template/: CMakeLists.txt  package.xml  setup.py
tools/ros_template_generator/rospy-template/config/: template.yaml
tools/ros_template_generator/rospy-template/launch/: template.launch
tools/ros_template_generator/rospy-template/src/template/: template.py
