<?xml version="1.0"?>
<package format="2">
  <name>boundary_detector</name>
  <version>1.0.0</version>
  <description>Simple boundary_detector node, that inputs map and outputs boundarys</description>
  <maintainer email="tairanchen@bitfsd.cn">chentairan</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!--For custom message import-->
  <depend>fsd_common_msgs</depend>

  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
