<?xml version="1.0"?>
<package format="2">
  <name>line_detector</name>
  <version>0.0.0</version>
  <description>Simple line_detector node</description>
  <maintainer email="tairanchen@bitfsd.cn">chentairan</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!--For custom message import-->

  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
